--- a/plugin.xml
+++ b/plugin.xml
@@ -68,5 +68,5 @@
 
     <dependency id="com.philmerrell.cordova.canopen" url="https://github.com/philbot5000/CanOpen" commit="d310db1e943e855a2be9724eb4f9f4542915d615" />
 
-    <dependency id="org.apache.cordova.inappbrowser" url="https://github.com/apache/cordova-plugin-inappbrowser" commit="8012ae709bb749eaad434c05cd7e2aeda8f3a425" />
+    <dependency id="org.apache.cordova.inappbrowser" url="https://github.com/apache/cordova-plugin-inappbrowser" />
 </plugin>
